--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ nav {
 @font-face {font-family:"Harabara";src:url("fonts/Harabara.eot?") format("eot"),url("fonts/Harabara.woff") format("woff"),url("fonts/Harabara.ttf") format("truetype"),url("fonts/Harabara.svg#Harabara") format("svg");font-weight:normal;font-style:normal;}
 .brand-logo {
 	font-family: "Harabara";
+	letter-spacing: 2px;
 }
 .brand-logo::first-letter { 
     font-size: 110%;
