--- a/css/index.css
+++ b/css/index.css
@@ -16,5 +16,8 @@ nav {
     color: #40d47e;
 }
 nav .button-collapse {
-    padding-left: 5px;
+    padding-left: 10px;
+}
+#reg, .log, .logout, #regtitle, #logtitle {
+	display: none;
 }
