--- a/css/index.css
+++ b/css/index.css
@@ -21,3 +21,12 @@ nav .button-collapse {
 #reg, .log, .logout, #regtitle, #logtitle, .fb_title {
 	display: none;
 }
+.cd-top.cd-is-visible {
+  /* the button becomes visible */
+  visibility: visible;
+  opacity: 1;
+}
+.cd-top.cd-fade-out {
+  /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
+  opacity: .5;
+}
