--- a/css/index.css
+++ b/css/index.css
@@ -28,3 +28,8 @@ nav .button-collapse {
     margin-top: 1rem;
 
 }
+@media only screen and (min-width : 993px) {
+  #sidenav-overlay {
+    display: none !important; 
+  } 
+}
