--- a/partials/home.html
+++ b/partials/home.html
@@ -92,12 +92,12 @@
     <div class="row">
       <div class="input-field col s12">
         <i class="material-icons prefix">search</i>
-        <input id="icon_prefix" ng-model="searchText.title" type="text" class="validate">
+        <input id="icon_prefix" ng-model="searchText" type="text" class="validate">
         <label for="icon_prefix">Search Events...</label>
       </div>
     </div>
     <div class="row">
-        <div class="col s12 m6" ng-repeat="post in posts | filter:searchText">
+        <div class="col s12 m6" ng-repeat="post in posts | searchText">
             <div class="card">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
