--- a/partials/home.html
+++ b/partials/home.html
@@ -90,11 +90,8 @@
   <div class="container">
     <p></p>
     <div class="row">
-      <div class="input-field col s12">
-        <i class="material-icons prefix">search</i>
-        <input id="icon_prefix" ng-model="query" type="text" class="validate">
-        <label for="icon_prefix">Search Events...</label>
-      </div>
+        <input ng-model="query">
+
     </div>
     <div class="row">
         <div class="col s12 m6" ng-repeat="post in posts | filter:query">
