--- a/partials/home.html
+++ b/partials/home.html
@@ -90,11 +90,14 @@
   <div class="container">
     <p></p>
     <div class="row">
-        <input ng-model="search.$">
-
+      <div class="input-field col s12">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" ng-model="query" type="text" class="validate">
+        <label for="icon_prefix">Search Events...</label>
+      </div>
     </div>
     <div class="row">
-        <div class="col s12 m6" ng-repeat="post in posts | filter:search:strict">
+        <div class="col s12 m6" ng-repeat="post in posts | filter:query">
             <div class="card">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
