--- a/partials/about.html
+++ b/partials/about.html
@@ -20,7 +20,7 @@
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a href="#/post">Post</a></li>
           <li class="l_i"><a href="#/profile">Profile</a></li>
-          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="l_i"><a href="#"ng-click="authObj.$unauth()">Log Out</a></li>
           <li class="divider"></li>
           <li><a href="#/contact">Contact</a></li>
           <li><a href="#/about">Contact</a></li>
