--- a/partials/home.html
+++ b/partials/home.html
@@ -5,11 +5,11 @@
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#/">Home</a></li>
-          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
-          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
-          <li class="l_i"><a href="#/post">Post</a></li>
-          <li class="l_i"><a href="#/profile">Profile</a></li>
-          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li ng-hide="authData"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li ng-hide="authData"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li ng-show="authData"><a href="#/post">Post</a></li>
+          <li ng-show="authData"><a href="#/profile">Profile</a></li>
+          <li ng-show="authData"><a href="#">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
           <li><a href="#/contact">Contact</a></li>
