--- a/partials/home.html
+++ b/partials/home.html
@@ -4,7 +4,6 @@
 
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#/">Home</a></li>
           <li ng-hide="authData"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li ng-hide="authData"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li ng-show="authData"><a href="#/post">Post</a></li>
@@ -12,6 +11,7 @@
           <li ng-show="authData"><a href="#">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
+          <li><a href="#/about">About</a></li>
           <li><a href="#/contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
