--- a/partials/home.html
+++ b/partials/home.html
@@ -96,9 +96,9 @@
         <label for="icon_prefix">Search Events...</label>
       </div>
     </div>
-    <div class="row">
-        <div class="col s12 m6" ng-repeat="post in posts | filter:query">
-            <div class="card">
+    <div class="row" id="feed">
+        <div class="col s12 m6">
+            <div class="card" ng-repeat="post in posts | filter:query">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
                     <span class="card-title">{{ post.title }}</span>
@@ -154,6 +154,8 @@
                 </div>
             </div>
         </div>
-
+        <div class="col s12 m6 sidebar">
+            hwllo
+        </div>
     </div>
   </div>
