--- a/partials/home.html
+++ b/partials/home.html
@@ -89,13 +89,6 @@
   </div>
   <div class="container">
     <p></p>
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="material-icons prefix">search</i>
-        <input id="icon_prefix" ng-model="query" type="text" class="validate">
-        <label for="icon_prefix">Search Events...</label>
-      </div>
-    </div>
     <div class="row" id="feed">
         <div class="col s12 m6">
             <div class="card" ng-repeat="post in posts | filter:query">
@@ -155,7 +148,11 @@
             </div>
         </div>
         <div class="col s12 m6 sidebar">
-            hwllo
+          <div class="input-field">
+            <i class="material-icons prefix">search</i>
+            <input id="icon_prefix" ng-model="query" type="text" class="validate">
+            <label for="icon_prefix">Search Events...</label>
+          </div>
         </div>
     </div>
   </div>
