--- a/partials/home.html
+++ b/partials/home.html
@@ -153,6 +153,12 @@
             <input id="icon_prefix" ng-model="query" type="text" class="validate">
             <label for="icon_prefix">Search Events...</label>
           </div>
+          <select class="browser-default">
+            <option value="" disabled selected>Choose your option</option>
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+          </select>
         </div>
     </div>
   </div>
