--- a/partials/home.html
+++ b/partials/home.html
@@ -153,12 +153,26 @@
             <input id="icon_prefix" ng-model="query" type="text" class="validate">
             <label for="icon_prefix">Search Events...</label>
           </div>
-          <select class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
-          </select>
+          <div class="input-field col s12">
+            <select ng-model="query.tags">
+              <option value="" disabled selected>All</option>
+              <option value="Animals">Animals</option>
+              <option value="Art/Culture">Art/Culture</option>
+              <option value="Children/Youth">Children/Youth</option>
+              <option value="Community">Community</option>
+              <option value="Computers and Technology">Computers and Technology</option>
+              <option value="Disaster Relief">Disaster Relief</option>
+              <option value="Education">Education</option>
+              <option value="Employment">Employment</option>
+              <option value="Enviorment">Enviorment</option>
+              <option value="Health/Medicine">Health/Medicine</option>
+              <option value="Hunger">Hunger</option>
+              <option value="Media/Broadcasting">Media/Broadcasting</option>
+              <option value="Seniors">Seniors</option>
+              <option value="Sports/Recreation">Sports/Recreation</option>
+            </select>
+            <label>Materialize Select</label>
+          </div>
         </div>
     </div>
   </div>
