--- a/partials/home.html
+++ b/partials/home.html
@@ -150,7 +150,7 @@
         <div class="col s12 m6 sidebar">
           <div class="input-field">
             <i class="material-icons prefix">search</i>
-            <input id="icon_prefix" ng-model="query" type="text" class="validate">
+            <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
             <label for="icon_prefix">Search Events...</label>
           </div>
 
