--- a/partials/home.html
+++ b/partials/home.html
@@ -90,7 +90,9 @@
   <div class="container">
     <p></p>
     <div class="row" id="feed">
+
         <div class="col s12 m6">
+            <div ng-show="!posts.length">No colors available</div>
             <div class="card" ng-repeat="post in posts | filter:query">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
