--- a/partials/home.html
+++ b/partials/home.html
@@ -93,7 +93,7 @@
 
         <div class="col s12 m6">
             <div ng-show="!filtered.length">No colors available</div>
-            <div class="card" "post in filtered = (posts | filter:query)">
+            <div class="card" ng-repeat="post in filtered = (posts | filter:query)">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
                     <span class="card-title">{{ post.title }}</span>
