--- a/partials/home.html
+++ b/partials/home.html
@@ -92,7 +92,10 @@
     <div class="row" id="feed">
 
         <div class="col s12 m6">
-            <div ng-show="!filtered.length">No colors available</div>
+            <div ng-show="!filtered.length" class="card-panel">
+              <span>No posts available.
+              </span>
+            </div>
             <div class="card" ng-repeat="post in filtered = (posts | filter:query)">
                 <div class="card-image">
                     <img src="{{ post.picture }}">
