--- a/partials/home.html
+++ b/partials/home.html
@@ -63,20 +63,20 @@
       <h4>Log In</h4>
       <div class="divider"></div>
       <p></p>
-      <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      <p id="logtitle" ng-show="error" class="red-text">There was an error. Consider revising and try again.</p>
       <form class="col s12">
 
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">email</i>
-            <input id="logemail" type="email" class="validate">
+            <input ng-model="logemail" type="email" class="validate">
             <label for="logemail" data-error="Invalid">Email</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">vpn_key</i>
-            <input id="logpass" type="password" class="validate">
+            <input ng-model="logpass" type="password" class="validate">
             <label for="logpass">Password</label>
           </div>
         </div>
