--- a/partials/home.html
+++ b/partials/home.html
@@ -84,7 +84,7 @@
     </div>
     <div class="modal-footer">
       <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-      <a id="login" href="#" class=" modal-action waves-effect waves-green btn">Log In</a>
+      <button id="login" ng-click="login()" class=" modal-action waves-effect waves-green btn">Log In</button>
     </div>
   </div>
   <div class="container">
