--- a/partials/home.html
+++ b/partials/home.html
@@ -8,7 +8,7 @@
           <li ng-hide="authData"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li ng-show="authData"><a href="#/post">Post</a></li>
           <li ng-show="authData"><a href="#/profile">Profile</a></li>
-          <li ng-show="authData"><a href="#">Log Out</a></li>
+          <li ng-show="authData"><a ng-click="authObj.$unauth()" href="">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
           <li><a href="#/about">About</a></li>
