--- a/partials/home.html
+++ b/partials/home.html
@@ -63,7 +63,7 @@
       <h4>Log In</h4>
       <div class="divider"></div>
       <p></p>
-      <p id="logtitle" ng-show="error" class="red-text">There was an error. Consider revising and try again.</p>
+      <p id="logtitle" ng-show="wrong" class="red-text">There was an error. Consider revising and try again.</p>
       <form class="col s12">
 
         <div class="row">
