--- a/partials/home.html
+++ b/partials/home.html
@@ -54,7 +54,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a href="#" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
       <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
     </div>
   </div>
@@ -83,7 +83,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a href="#" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
       <button id="login" ng-click="login()" class=" modal-action waves-effect waves-green btn">Log In</button>
     </div>
   </div>
