--- a/partials/home.html
+++ b/partials/home.html
@@ -31,7 +31,7 @@
   </div>
   <div id="register_modal" class="modal">
     <div class="modal-content">
-      <h4 >Register</h4>
+      <h4 >Organization Registration</h4>
       <div class="divider"></div>
       <p></p>
       <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
