--- a/partials/profile.html
+++ b/partials/profile.html
@@ -29,6 +29,81 @@
       </div>
     </nav>
   </div>
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
 
+        <a href="#" class="brand-logo center">bridge</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="../">Home</a></li>
+          <li class="l_i"><a href="../post">Post</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+        </ul>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="../about">About</a></li>
+          <li><a href="../contact">Contact</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="../">Home</a></li>
+          <li class="l_i"><a href="../post">Post</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="divider"></li>
+          <li><a href="../about">About</a></li>
+          <li><a href="../contact">Contact</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
   <div class="container">
-      About
+
+    
+     <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="small_nav_wrapper col s12 m6">
+              <nav class="small_nav">
+                <div class="nav-wrapper">
+                  <a id="type"href="#" class="brand-logo center"></a> 
+                </div>
+              </nav>
+            </div>
+            <div class="input-field col s12 m6">
+              <ul class="collection">
+                <li class="collection-item avatar">
+                  <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+                  <div class="file-field input-field">
+                    <input placeholder="Change Picture" class="file-path validate" type="text"/>
+                    <div style="opacity:0;"class="btn">
+                      <span>Image</span>
+                      <input id="imgInp" type="file" accept="image/*"/>
+                    </div>
+                  </div>   
+                </li>
+              </ul>
+            </div>    
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">account_circle</i>
+              <input id="name" type="text" class="validate">
+              <label class="active" for="name">Name</label>
+            </div>
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">email</i>
+              <input id="email" type="email" class="validate">
+              <label class="active" for="email">Email</label>
+            </div>
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">call</i>
+              <input id="phone" type="tel" class="validate">
+              <label class="active" for="phone">Phone Number</label>
+            </div>
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">subject</i>
+              <textarea id="description" class="materialize-textarea" length="200"></textarea>
+              <label for="description">Description</label>
+            </div>
+          </div>
+          <a id="save" href="#" class="waves-effect waves-green btn">Save</a>
+        </form>
+     </div>
+  </div>
