--- a/partials/profile.html
+++ b/partials/profile.html
@@ -28,7 +28,7 @@
   </div>
   <div class="container">
 
-    
+    {{data.name}}
      <div class="row">
         <form class="col s12">
           <div class="row">
