--- a/partials/profile.html
+++ b/partials/profile.html
@@ -27,8 +27,6 @@
     </nav>
   </div>
   <div class="container">
-
-    {{data.name}}
      <div class="row">
         <form class="col s12">
           <div class="row">
@@ -56,7 +54,7 @@
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">account_circle</i>
               <input id="name" type="text" class="validate">
-              <label class="active" for="name">Name</label>
+              <label class="active" for="name">{{data.name}}</label>
             </div>
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">email</i>
