--- a/partials/profile.html
+++ b/partials/profile.html
@@ -53,8 +53,8 @@
             </div>    
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">account_circle</i>
-              <input id="name" type="text" class="validate">
-              <label class="active" for="name">{{ data.name }}</label>
+              <input ng-model="data.name" type="text" class="validate">
+              <label class="active" for="name">Name</label>
             </div>
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">email</i>
