--- a/partials/profile.html
+++ b/partials/profile.html
@@ -69,7 +69,7 @@
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">subject</i>
               <textarea ng-model="data.description" class="materialize-textarea" length="200"></textarea>
-              <label for="description">Description</label>
+              <label class="active" for="description">Description</label>
             </div>
           </div>
           <a id="save" ng-click="save()" class="waves-effect waves-green btn">Save</a>
