--- a/partials/profile.html
+++ b/partials/profile.html
@@ -28,7 +28,6 @@
   </div>
   <div class="container">
      <div class="row">
-        <form class="col s12">
             <div class="input-field col s12 m6">
               <ul class="collection">
                 <li class="collection-item avatar">
@@ -64,7 +63,6 @@
               <label class="active" for="description">Description</label>
             </div>
           </div>
-          <a id="save" ng-click="save()" class="waves-effect waves-green btn">Save</a>
-        </form>
+          <button id="save" ng-click="save()" class="waves-effect waves-green btn">Save</button>
      </div>
   </div>
