--- a/partials/profile.html
+++ b/partials/profile.html
@@ -30,7 +30,6 @@
      <p></p>
      <div class="row">
             <div class="input-field col s12 m6">
-              <p></p>
               <i class="material-icons prefix">account_circle</i>
               <input ng-model="data.name" type="text" class="validate">
               <label class="active" for="name">Name</label>
@@ -49,22 +48,18 @@
                 </li>
               </ul>
             </div>    
-            <div class="input-field col s12 m6">
-              <i class="material-icons prefix">email</i>
-              <input ng-model="data.email" type="email" class="validate">
-              <label class="active" for="email">Email</label>
-            </div>
+
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">call</i>
               <input ng-model="data.phone" type="tel" class="validate">
               <label class="active" for="phone">Phone Number</label>
             </div>
-            <div class="input-field col s12 m12">
+            <div class="input-field col s12 m6">
               <i class="material-icons prefix">subject</i>
               <textarea ng-model="data.description" class="materialize-textarea" length="200"></textarea>
               <label class="active" for="description">Description</label>
             </div>
           </div>
-          <button id="save" ng-click="save()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="data.name.$dirty && data.name.$invalid || data.phone.$dirty && data.phone.$invalid || data.description.$dirty && data.description.$invalid || data.image.$dirty && data.image.$invalid" ng-disabled="data.name.$dirty && data.name.$invalid || data.phone.$dirty && data.phone.$invalid || data.description.$dirty && data.description.$invalid || data.image.$dirty && data.image.$invalid" ng-click="save()" class="waves-effect waves-green btn">Save</button>
      </div>
   </div>
