--- a/partials/profile.html
+++ b/partials/profile.html
@@ -29,9 +29,10 @@
   <div class="container">
      <p></p>
      <div class="row">
+        <form name="profileForm" novalidate>
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">account_circle</i>
-              <input ng-model="data.name" type="text" class="validate" required>
+              <input name="name" ng-model="data.name" type="text" class="validate" required>
               <label class="active" for="name">Name</label>
             </div>
             <div class="input-field col s12 m6">
@@ -42,7 +43,7 @@
                     <input placeholder="Change Picture" class="file-path validate" type="text"/>
                     <div style="opacity:0;"class="btn">
                       <span>Image</span>
-                      <input ng-model="data.image" type="file" accept="image/*" required/>
+                      <input name="image" ng-model="data.image" type="file" accept="image/*" required/>
                     </div>
                   </div>   
                 </li>
@@ -51,15 +52,15 @@
 
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">call</i>
-              <input ng-model="data.phone" type="tel" class="validate" required>
+              <input name="phone" ng-model="data.phone" type="tel" class="validate" required>
               <label class="active" for="phone">Phone Number</label>
             </div>
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">subject</i>
-              <textarea ng-model="data.description" class="materialize-textarea" length="200" required></textarea>
+              <textarea name="description" ng-model="data.description" class="materialize-textarea" length="200" required></textarea>
               <label class="active" for="description">Description</label>
             </div>
           </div>
-          <button ng-hide="data.name.$error.required || data.phone.$error.required || data.description.$error.required || data.image.$error.required" ng-disabled="data.name.$error.required || data.phone.$error.required || data.description.$error.required || data.image.$error.required" ng-click="save()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="profileForm.name.$error.required || profileForm.phone.$error.required || profileForm.description.$error.required || profileForm.image.$error.required" ng-click="save()" class="waves-effect waves-green btn">Save</button>
      </div>
   </div>
