--- a/partials/profile.html
+++ b/partials/profile.html
@@ -28,6 +28,14 @@
   </div>
   <div class="container">
      <p></p>
+     <div class="row" ng-show="verified">
+        <div class="col s12">
+          <div class="card-panel teal">
+            <span class="white-text">Your organization's verification is in progress. You will be able to post soon.
+            </span>
+          </div>
+        </div>
+     </div>     
      <div class="row">
         <form name="profileForm" novalidate>
             <div class="input-field col s12 m6">
