--- a/partials/profile.html
+++ b/partials/profile.html
@@ -31,7 +31,7 @@
      <div class="row" ng-hide="verified">
         <div class="col s12">
           <div class="card-panel teal">
-            <span class="white-text">Your organization's verification is in progress. You will be able to post soon.
+            <span class="white-text">*Your organization's verification is in progress. You will be able to post soon.
             </span>
           </div>
         </div>
