--- a/partials/profile.html
+++ b/partials/profile.html
@@ -28,10 +28,10 @@
   </div>
   <div class="container">
      <p></p>
-     <div class="row" ng-hide="verified">
+     <div class="row" ng-hide="true">
         <div class="col s12">
           <div class="card-panel teal">
-            <span class="white-text">*Your organization's verification is in progress. You will be able to post soon. {{data.verified}}
+            <span class="white-text">*Your organization's verification is in progress. You will be able to post soon.
             </span>
           </div>
         </div>
