--- a/partials/profile.html
+++ b/partials/profile.html
@@ -28,7 +28,7 @@
   </div>
   <div class="container">
      <p></p>
-     <div class="row hide-{{data.image}}">
+     <div class="row show-{{data.image}}">
         <div class="col s12">
           <div class="card-panel teal">
             <span class="white-text">*Your organization's verification is in progress. You will be able to post soon.
