--- a/partials/home.html
+++ b/partials/home.html
@@ -88,6 +88,34 @@
   </div>
   <div class="container">
     <p></p>
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="input-field">
+              <i class="material-icons prefix">search</i>
+              <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
+              <label for="icon_prefix">Search Events...</label>
+            </div>
+        </div>
+        <div class="col s12 m6">
+            <select ng-model="query.tags" class="browser-default">
+              <option value="">All</option>
+              <option value="Animals">Animals</option>
+              <option value="Art/Culture">Art/Culture</option>
+              <option value="Children">Children</option>
+              <option value="Community">Community</option>
+              <option value="Technology">Technology</option>
+              <option value="Disaster Relief">Disaster Relief</option>
+              <option value="Education">Education</option>
+              <option value="Employment">Employment</option>
+              <option value="Enviorment">Enviorment</option>
+              <option value="Medicine">Medicine</option>
+              <option value="Hunger">Hunger</option>
+              <option value="Broadcasting">Broadcasting</option>
+              <option value="Seniors">Seniors</option>
+              <option value="Sports/Recreation">Sports</option>
+            </select> 
+        </div>
+    </div>
     <div class="row" id="feed">
 
         <div class="col s12 m6">
@@ -150,32 +178,6 @@
                     <a href="{{ post.link }}" target="_blank">Join</a>
                 </div>
             </div>
-        </div>
-        <div class="col s12 m6 sidebar">
-          <div class="input-field">
-            <i class="material-icons prefix">search</i>
-            <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
-            <label for="icon_prefix">Search Events...</label>
-          </div>
-
-            <select ng-model="query.tags" class="browser-default">
-              <option value="">All</option>
-              <option value="Animals">Animals</option>
-              <option value="Art/Culture">Art/Culture</option>
-              <option value="Children/Youth">Children/Youth</option>
-              <option value="Community">Community</option>
-              <option value="Computers and Technology">Computers and Technology</option>
-              <option value="Disaster Relief">Disaster Relief</option>
-              <option value="Education">Education</option>
-              <option value="Employment">Employment</option>
-              <option value="Enviorment">Enviorment</option>
-              <option value="Health/Medicine">Health/Medicine</option>
-              <option value="Hunger">Hunger</option>
-              <option value="Media/Broadcasting">Media/Broadcasting</option>
-              <option value="Seniors">Seniors</option>
-              <option value="Sports/Recreation">Sports/Recreation</option>
-            </select>
-
         </div>
     </div>
   </div>
