--- a/partials/home.html
+++ b/partials/home.html
@@ -175,7 +175,7 @@
                     </ul>
                 </div>
                 <div class="card-action">
-                    <a href="{{ post.link }}" target="_blank">Join</a>
+                    <a href="{{ post.link }}" target="_blank">Join <i class="material-icons">trending_flat</i></a>
                 </div>
             </div>
         </div>
