--- a/partials/home.html
+++ b/partials/home.html
@@ -6,7 +6,7 @@
         <ul class="right hide-on-med-and-down">
           <li ng-hide="authData"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li ng-hide="authData"><a class="modal-trigger" href="#register_modal">Register</a></li>
-          <li ng-show="authData" class="hide-{{verified}}"><a href="#/post">Post</a></li>
+          <li ng-show="authData" class="hide-{{verified.verified}}"><a href="#/post">Post</a></li>
           <li ng-show="authData"><a href="#/profile">Profile</a></li>
           <li ng-show="authData"><a ng-click="authObj.$unauth()" href="">Log Out</a></li>
         </ul>
