--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ input[type=range] {
 .card-title {
     text-shadow: 0px 0px 10px #000;
 }
-#alert, #profile {
+#alert, #post {
     display: none;
 }
 .show-true {
