--- a/partials/post.html
+++ b/partials/post.html
@@ -131,7 +131,7 @@
               <label for="description">Description</label>
             </div>
           </div>
-          
+          <div id="us"></div>
           <a id="post" href="#" class="waves-effect waves-green btn">Post</a>
         </form>
      </div>
