--- a/partials/post.html
+++ b/partials/post.html
@@ -71,7 +71,7 @@
                       <option value="9 AM">9 AM</option>
                       <option value="10 AM">10 AM</option>
                       <option value="11 AM">11 AM</option>
-                      <option value="12 PM">12 AM</option>
+                      <option value="12 PM">12 PM</option>
                       <option value="1 PM">1 PM</option>
                       <option value="2 PM" selected="true">2 PM</option>
                       <option value="3 PM">3 PM</option>
@@ -104,7 +104,7 @@
                       <option value="9 AM">9 AM</option>
                       <option value="10 AM">10 AM</option>
                       <option value="11 AM">11 AM</option>
-                      <option value="12 PM">12 AM</option>
+                      <option value="12 PM">12 PM</option>
                       <option value="1 PM">1 PM</option>
                       <option value="2 PM">2 PM</option>
                       <option value="3 PM" selected="true">3 PM</option>
