--- a/partials/post.html
+++ b/partials/post.html
@@ -124,7 +124,25 @@
               <input id="location" type="text" class="validate">
               <label class="active" for="name">Location</label>
             </div>
-
+            <div class="input-field col s12 m6">
+              <select class="browser-default">
+                <option value="">All</option>
+                <option value="Animals">Animals</option>
+                <option value="Art/Culture">Art/Culture</option>
+                <option value="Children">Children</option>
+                <option value="Community">Community</option>
+                <option value="Technology">Technology</option>
+                <option value="Disaster Relief">Disaster Relief</option>
+                <option value="Education">Education</option>
+                <option value="Employment">Employment</option>
+                <option value="Enviorment">Enviorment</option>
+                <option value="Medicine">Medicine</option>
+                <option value="Hunger">Hunger</option>
+                <option value="Broadcasting">Broadcasting</option>
+                <option value="Seniors">Seniors</option>
+                <option value="Sports/Recreation">Sports</option>
+              </select>
+            </div>
             <div class="input-field col s12 m12">
               <i class="material-icons prefix">subject</i>
               <textarea id="description" class="materialize-textarea" length="200"></textarea>
