--- a/partials/post.html
+++ b/partials/post.html
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.startTime.$error.required || postForm.endDate.$error.required || postForm.endTime.$error.required || postForm.location.$error.required || postForm.tags.$error.required || postForm.description.$error.required" ng-disabled="postForm.title.$error.required || postForm.startDate.$error.required || postForm.startTime.$error.required || postForm.endDate.$error.required || postForm.endTime.$error.required || postForm.location.$error.required || postForm.tags.$error.required || postForm.description.$error.required" ng-click="post()"  class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.startTime.$error.required || postForm.endDate.$error.required || postForm.endTime.$error.required || postForm.location.$error.required || postForm.tags.$error.required || postForm.description.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
         </form>
      </div>
   </div>
